<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Google Inc. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.example.android.mediacontroller.MainActivity">

        <TextView
            android:id="@+id/status_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
        <Button
            android:id="@+id/reconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/reconnect" />
        <AutoCompleteTextView
            android:id="@+id/package_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/package_name_hint"
            android:text="@string/default_pkg"
            android:inputType="textUri" />
        <EditText
            android:id="@+id/class_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/class_name_hint"
            android:text="@string/default_cls"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:inputType="textUri" />
        <EditText
            android:id="@+id/uri_id_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id_hint"
            android:text="@string/default_uri"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:inputType="textUri" />
        <Button
            android:id="@+id/update_media_info_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_media_info" />
        <TextView
            android:id="@+id/media_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/media_info_default" />
    </LinearLayout>

</ScrollView>
