<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Google Inc. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/input_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/input_options" />

        <EditText
            android:id="@+id/uri_id_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/id_hint"
            android:inputType="textUri"
            android:text="@string/default_uri" />

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:weightSum="3">

        <Button
            android:id="@+id/action_prepare"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_prepare" />

        <Button
            android:id="@+id/action_play"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_play" />

    </LinearLayout>

    <TextView
        android:id="@+id/media_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top|start"
        android:text="@string/media_info_default" />

    <TextView
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_focus_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp">

        <ToggleButton
            android:id="@+id/audio_focus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/audio_focus_gain_focus"
            android:textOn="@string/audio_focus_abandon_focus" />

        <Spinner
            android:id="@+id/audio_focus_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/audio_focus_types" />

    </LinearLayout>
</LinearLayout>
